structmeta-tests/tests/compile_fail/struct_meta/option_not_parse.stderr
error[E0277]: the trait bound `NotParse: syn::parse::Parse` is not satisfied
 --> tests/compile_fail/struct_meta/option_not_parse.rs:3:23
  |
3 |     not_parse: Option<NotParse>,
  |     ---------         ^^^^^^^^ unsatisfied trait bound
  |     |
  |     required by a bound introduced by this call
  |
help: the trait `syn::parse::Parse` is not implemented for `NotParse`
 --> tests/compile_fail/struct_meta/option_not_parse.rs:5:1
  |
5 | struct NotParse;
  | ^^^^^^^^^^^^^^^
  = help: the following other types implement trait `syn::parse::Parse`:
            Box<T>
            Example
            Option<T>
            Option<syn::expr::Label>
            Option<syn::generics::BoundLifetimes>
            Option<syn::generics::WhereClause>
            Option<syn::ty::Abi>
            proc_macro2::Group
          and $N others
note: required by a bound in `syn::parse::ParseBuffer::<'a>::parse`
 --> $CARGO/syn-$VERSION/src/parse.rs
  |
  |     pub fn parse<T: Parse>(&self) -> Result<T> {
  |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
